bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:3: error: ')' expected but '}' found.
} 
^